fix: Prevent overflow on the sidebar

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,4 +1,6 @@
 #Calendar {
+    display: flex;
+    flex-direction: column;
     color: #D7D7D7;
 }
 
